# LLM_Experiments

./: .gitignore
FreeCodeCampLLM_DevCoures/: chroma_basic.py  empty.txt  langchain_integration.py  openai_direct.py  pyproject.toml
FreeCodeCampLLM_DevCoures/.chainlit/: .langchain.db
first_langchain/: .env  app.py  pyproject.toml
first_langchain/first_langchain/: __init__.py
first_langchain/first_langchain/models/: learning_path.py
langchain-streaming/: index.html  main.py  pyproject.toml
langchain-streaming/static/css/: skeleton.css
langchain-streaming/static/js/: chat.js
